fix: mobile was profile.js misaligned

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -59,3 +59,9 @@ body {
 .user-info {
   min-width: 800px;
 }
+
+@media screen and (max-width: 800px) {
+  .user-info {
+    min-width: 400px;
+  }
+}
